syntax = "proto3";

option go_package = "github.com/pastelnetwork/gonode/integration/fakes/dd-server/dupedetection";

package dupedetection;

service DupeDetectionServer {
    rpc ImageRarenessScore(RarenessScoreRequest) returns(ImageRarenessScoreReply);
}

message RarenessScoreRequest {
    string path = 1;
    string block_hash = 2;
    string block_height = 3;
    string timestamp = 4;
    string pastel_id = 5;
    string registering_sn1 = 6;
    string registering_sn2 = 7;
    string registering_sn3 = 8;
    bool is_pastel_openapi_request = 9;
    string open_api_subset_id_string = 10;
}

message ImageRarenessScoreReply {
    string block = 1;
    string principal = 2;
    string dupe_detection_system_version = 3;
    bool is_likely_dupe = 4;
    bool is_rare_on_internet = 5;
    RarenessScores rareness_scores = 6;
    InternetRareness internet_rareness = 7;
    float open_nsfw_score = 8;
    AltNsfwScores alternative_nsfw_scores = 9;
    repeated float image_fingerprint_of_candidate_image_file = 10;
    FingerprintsStat fingerprints_stat = 11;
    string hash_of_candidate_image_file = 12;
    PerceptualImageHashes perceptual_image_hashes = 13;
    uint32 perceptual_hash_overlap_count = 14;
    Maxes maxes = 15;
    Percentile percentile = 16;
}

message RarenessScores {
    float combined_rareness_score = 1;
    float xgboost_predicted_rareness_score = 2;
    float nn_predicted_rareness_score = 3;
    float overall_average_rareness_score = 4;
}

message InternetRareness {
    uint32 matches_found_on_first_page = 1;
    uint32 number_of_pages_of_results = 2;
    string url_of_first_match_in_page = 3;
}

message AltNsfwScores {
    float drawings = 1;
    float hentai = 2;
    float neutral = 3;
    float porn = 4;
    float sexy = 5;
}

message PerceptualImageHashes {
    string pdq_hash = 1;
    string perceptual_hash = 2;
    string average_hash = 3;
    string difference_hash = 4;
    string neuralhash_hash = 5;
}

message FingerprintsStat {
    uint32 number_of_fingerprints_requiring_further_testing_1 = 1;
    uint32 number_of_fingerprints_requiring_further_testing_2 = 2;
    uint32 number_of_fingerprints_requiring_further_testing_3 = 3;
    uint32 number_of_fingerprints_requiring_further_testing_4 = 4;
    uint32 number_of_fingerprints_requiring_further_testing_5 = 5;
    uint32 number_of_fingerprints_requiring_further_testing_6 = 6;
    uint32 number_of_fingerprints_of_suspected_dupes = 7;
}

message Maxes {
    float pearson_max = 1;
    float spearman_max = 2;
    float kendall_max = 3;
    float hoeffding_max = 4;
    float mutual_information_max = 5;
    float hsic_max = 6;
    float xgbimportance_max = 7;
}

message Percentile {
    float pearson_top_1_bps_percentile = 1;
    float spearman_top_1_bps_percentile = 2;
    float kendall_top_1_bps_percentile = 3;
    float hoeffding_top_10_bps_percentile = 4;
    float mutual_information_top_100_bps_percentile = 5;
    float hsic_top_100_bps_percentile = 6;
    float xgbimportance_top_100_bps_percentile = 7;
}